@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.2
-Date: ????
+Date: 2025-04-24
   Changes:
+    - Add an unlock for the new Coke from carbon recipe
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 2025-04-24
